samples/bookmap/valid/R4.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle>
    <booklibrary>Lib</booklibrary>
    <mainbooktitle>Title</mainbooktitle>
    <booktitlealt>Alt Title</booktitlealt>
  </booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
</bookmap>