samples/bookmap/invalid/R2.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <bookmeta/>
  <booktitle>
    <booklibrary>Lib</booklibrary>
    <mainbooktitle>Title</mainbooktitle>
  </booktitle>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
</bookmap>